# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./folders";
 export * from "./notes";
+export * from "./smart-folders";
